--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     justify-content:space-between; 
 }
 .menu{ 
-    font-size: 1rem;
+    font-size: 14px;
     margin-top: 10px;
     display: flex;
     list-style: none;
