--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .container{
     width: 99%;
@@ -15,6 +18,7 @@
     border: none;
 }
 .header-items{
+    width: 90%;
     display: flex;
     justify-content: space-between;
 }
@@ -26,18 +30,19 @@
 }
 .nav{
     display: flex;
-    flex-basis: 50%;
+    flex-basis: 65%;
     align-content: center;
     justify-content:space-between; 
 }
 .menu{ 
-    font-size: 14px;
-    margin-top: 10px;
+    font-size: 16px;
+    justify-self: center;
+    align-self: center;
     display: flex;
     list-style: none;
     color: #fff;
-    li:nth-child(2){
-        padding-left: 15px;
+    li{
+        padding-left: 10px;
     }
 }
 .profile-img{
