--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     padding: 10px;
     margin: 0;
     border: none;
+    position: sticky;
+    top: 0;
 }
 .header-items{
     width: 90%;
@@ -54,5 +56,7 @@
 }
 
 .main{
-    
+    width: 100%;
+    height: 200vh;
+    background-color: aqua;
 }
